sqlanywhere-server/src/schema/snapshots/sqlanywhere_server__schema__migration__test__perform_migration.snap
---
source: sqlanywhere-server/src/schema/migration.rs
expression: row
---
{
    Ok(
        "job_id",
    ): (
        Integer,
        1,
    ),
    Ok(
        "status",
    ): (
        Text,
        "\"Enqueued\"",
    ),
    Ok(
        "migration",
    ): (
        Text,
        "{\"steps\":[{\"cond\":null,\"query\":{\"stmt\":{\"stmt\":\"CREATE TABLE test (x, y)\",\"kind\":\"DDL\",\"is_iud\":false,\"is_insert\":false,\"attach_info\":null},\"params\":{\"Positional\":[]},\"want_rows\":true}}]}",
    ),
}
