sqlanywhere-server/src/schema/snapshots/sqlanywhere_server__schema__migration__test__perform_migration_success-2.snap
---
source: sqlanywhere-server/src/schema/migration.rs
expression: row
---
{
    Ok(
        "job_id",
    ): (
        Integer,
        1,
    ),
    Ok(
        "status",
    ): (
        Integer,
        1,
    ),
    Ok(
        "migration",
    ): (
        Text,
        "{\"steps\":[{\"cond\":null,\"query\":{\"stmt\":{\"stmt\":\"CREATE TABLE test (x, y)\",\"kind\":\"DDL\",\"is_iud\":false,\"is_insert\":false,\"attach_info\":null},\"params\":{\"Positional\":[]},\"want_rows\":true}}]}",
    ),
    Ok(
        "error",
    ): (
        Null,
        (),
    ),
}
