sqlanywhere-server/src/schema/snapshots/sqlanywhere_server__schema__migration__test__perform_migration_success-3.snap
---
source: sqlanywhere-server/src/schema/migration.rs
expression: schema
---
Ok(
    [
        "{Ok(\"type\"): (Text, \"table\"), Ok(\"name\"): (Text, \"sqlite3_sqlanywhere_tasks\"), Ok(\"tbl_name\"): (Text, \"sqlite3_sqlanywhere_tasks\"), Ok(\"rootpage\"): (Integer, 2), Ok(\"sql\"): (Text, \"CREATE TABLE sqlite3_sqlanywhere_tasks (\\n            job_id INTEGER PRIMARY KEY,\\n            status INTEGER,\\n            migration TEXT NOT NULL,\\n            error TEXT\\n        )\")}",
    ],
)
